--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ $('.owl1').owlCarousel({
 $('.owlbanner').owlCarousel({
     loop:true,
     margin:10,
-	autoplay:false,
+	autoplay:true,
+	autoplayTimeout:5000,
     responsiveClass:true,
     nav:true,
 	navText: ["<i class='fa fa-angle-left'></i>","<i class='fa fa-angle-right'></i>"],
