--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
   <div class="container-fluid">
     <div class="col-sm-6 text-right"><img src="assets/images/animated.gif"></div>
     <div class="col-sm-6 text-center">
-      <h2>PROUDLY MADE IN PAKISTAN</h2>
+      <h2>PROUDLY MADE IN PAKISTAN
+      <img alt="Flag of Pakistan.svg" src="assets/images/flag.svg" decoding="async" class="thumbborder">
+      </h2>
       <p>Our products are lovingly made daily and shipped to over 55 cities in Pakistan. Be it the salted or coated popcorn, we promise you a fresh, delicious and healthy snacking.</p>
     </div>
     <div class="col-md-1 text-center"> </div>
