--- a/cares.html
+++ b/cares.html
@@ -38,7 +38,7 @@
               </li>
             </ul>
           </li>
-          <li><a href="cares.html"> <i class="fa fa-hand-holding-heart"></i><br>
+          <li class="active"><a href="cares.html"> <i class="fa fa-hand-holding-heart"></i><br>
             KORNEEZ CARES </a></li>
           <li><a href="about.html"> <i class="fa fa-korneez"></i><br>
             ABOUT </a></li>
@@ -55,64 +55,18 @@
 </header>
 <section class="banner">
   <div class="owlbanner owl-carousel owl-theme">
-    <div class="item active">  <img src="assets/images/banner1.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner2.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner3.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner4.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner5.png" alt="">  </div>
+    <div class="item"> <img src="assets/images/banner_cares.png"></div>
   </div>
 </section>
 <section class="products">
-  <h1>OUR HANDCRAFTED POPCORN</h1>
+  <h1>KORNEEZ CARES</h1>
   <div class="container-fluid">
-    <div class="owl1 owl-carousel owl-theme">
-      <div class="item">
-        <div class="product-image butter"><img src="assets/images/butterscotch.png" class="img-responsive"></div>
-        <span>BUTTERSCOTCH</span> <a href="butter.html" class="shop-box">SHOP NOW</a></div>
-      <div class="item">
-        <div class="product-image caramel"><img src="assets/images/caramel_peanut.png" class="img-responsive"></div>
-        <span>CARAMEL PEANUT</span> <a href="caramel.html" class="shop-box">SHOP NOW</a></div>
-      <div class="item">
-        <div class="product-image champ"><img src="assets/images/champ.png" class="img-responsive"></div>
-        <span>CHAMPS MIX</span><a href="champ.html" class="shop-box"> SHOP NOW </a></div>
-      <div class="item">
-        <div class="product-image plain"><img src="assets/images/plain_salted.png" class="img-responsive"></div>
-        <span>PLAIN SALTED</span> <a href="plain.html" class="shop-box">SHOP NOW</a></div>
-      <div class="item">
-        <div class="product-image toffee"><img src="assets/images/toffee.png" class="img-responsive"></div>
-        <span>TOFFEE</span> <a href="toffee.html" class="shop-box">SHOP NOW</a></div>
-    </div>
+    <p>Coming Soon....</p>
+
   </div>
 </section>
-<section class="ads">
-  <div class="container-fluid">
-    <div class="col-md-6">
-      <div class="owlAds owl-carousel owl-theme">
-        <div class="item"><img src="assets/images/box_ad.png" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad1.jpg" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad2.jpg" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad3.jpg" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad4.jpg" class="img-responsive"></div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <h3>FOLLOW US:
-        <div class="social"><i class="fab fa-facebook"></i> <i class="fab fa-twitter"></i> <i class="fab fa-instagram"></i> <i class="fab fa-youtube"></i></div>
-      </h3>
-      <h2>Latest Video</h2>
-      <img src="assets/images/video.png" class="img-responsive"> </div>
-  </div>
-</section>
-<section class="animated">
-  <div class="container-fluid">
-    <div class="col-sm-6 text-right"><img src="assets/images/animated.gif"></div>
-    <div class="col-sm-6 text-center">
-      <h2>PROUDLY MADE IN PAKISTAN <img alt="Flag of Pakistan.svg" src="assets/images/flag.svg" decoding="async" class="thumbborder"> </h2>
-      <p>Our products are lovingly made daily and shipped to over 55 cities in Pakistan. Be it the salted or coated popcorn, we promise you a fresh, delicious and healthy snacking.</p>
-    </div>
-    <div class="col-md-1 text-center"> </div>
-  </div>
-</section>
+
+
 <div class="top-bg"></div>
 <footer>
   <div class="container-fluid">
