--- a/contact.html
+++ b/contact.html
@@ -55,64 +55,36 @@
 </header>
 <section class="banner">
   <div class="owlbanner owl-carousel owl-theme">
-    <div class="item active">  <img src="assets/images/banner1.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner2.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner3.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner4.png" alt="">  </div>
-    <div class="item">  <img src="assets/images/banner5.png" alt="">  </div>
+    <div class="item"> <img src="assets/images/banner_contact.png"></div>
   </div>
 </section>
 <section class="products">
-  <h1>OUR HANDCRAFTED POPCORN</h1>
+  <h1>ABOUT US</h1>
   <div class="container-fluid">
-    <div class="owl1 owl-carousel owl-theme">
-      <div class="item">
-        <div class="product-image butter"><img src="assets/images/butterscotch.png" class="img-responsive"></div>
-        <span>BUTTERSCOTCH</span> <a href="butter.html" class="shop-box">SHOP NOW</a></div>
-      <div class="item">
-        <div class="product-image caramel"><img src="assets/images/caramel_peanut.png" class="img-responsive"></div>
-        <span>CARAMEL PEANUT</span> <a href="caramel.html" class="shop-box">SHOP NOW</a></div>
-      <div class="item">
-        <div class="product-image champ"><img src="assets/images/champ.png" class="img-responsive"></div>
-        <span>CHAMPS MIX</span><a href="champ.html" class="shop-box"> SHOP NOW </a></div>
-      <div class="item">
-        <div class="product-image plain"><img src="assets/images/plain_salted.png" class="img-responsive"></div>
-        <span>PLAIN SALTED</span> <a href="plain.html" class="shop-box">SHOP NOW</a></div>
-      <div class="item">
-        <div class="product-image toffee"><img src="assets/images/toffee.png" class="img-responsive"></div>
-        <span>TOFFEE</span> <a href="toffee.html" class="shop-box">SHOP NOW</a></div>
-    </div>
-  </div>
-</section>
-<section class="ads">
-  <div class="container-fluid">
-    <div class="col-md-6">
-      <div class="owlAds owl-carousel owl-theme">
-        <div class="item"><img src="assets/images/box_ad.png" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad1.jpg" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad2.jpg" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad3.jpg" class="img-responsive"></div>
-        <div class="item"><img src="assets/images/box_ad4.jpg" class="img-responsive"></div>
-      </div>
+   	<div class="col-md-6 contact">
+    	<p>AMK Enterprises,<br>
+				   Plot No 29, S-1<br>
+				Main Road,<br>
+                RCCI,<br>
+				Islamabad - Pakistan.
+        </p>
+        <p>
+            <strong>Phone:</strong> +92 51 4499 416
+        </p>
+        <p>
+            <strong>Email:</strong> info@korneez.com
+        </p>
     </div>
     <div class="col-md-6">
-      <h3>FOLLOW US:
-        <div class="social"><i class="fab fa-facebook"></i> <i class="fab fa-twitter"></i> <i class="fab fa-instagram"></i> <i class="fab fa-youtube"></i></div>
-      </h3>
-      <h2>Latest Video</h2>
-      <img src="assets/images/video.png" class="img-responsive"> </div>
-  </div>
-</section>
-<section class="animated">
-  <div class="container-fluid">
-    <div class="col-sm-6 text-right"><img src="assets/images/animated.gif"></div>
-    <div class="col-sm-6 text-center">
-      <h2>PROUDLY MADE IN PAKISTAN <img alt="Flag of Pakistan.svg" src="assets/images/flag.svg" decoding="async" class="thumbborder"> </h2>
-      <p>Our products are lovingly made daily and shipped to over 55 cities in Pakistan. Be it the salted or coated popcorn, we promise you a fresh, delicious and healthy snacking.</p>
+    <div class="map-responsive">
+    	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13306.020178956203!2d73.2384907!3d33.5142524!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2cd639554072a14!2sKORNEEZ!5e0!3m2!1sen!2ssg!4v1598272401314!5m2!1sen!2ssg" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
     </div>
-    <div class="col-md-1 text-center"> </div>
+
   </div>
 </section>
+
+
 <div class="top-bg"></div>
 <footer>
   <div class="container-fluid">
