--- a/about.html
+++ b/about.html
@@ -162,23 +162,31 @@
     </div>
     <div class="col-md-6">
       <h3>FOLLOW US:
-        <div class="social"><i class="fab fa-facebook"></i> <i class="fab fa-twitter"></i> <i class="fab fa-instagram"></i> <i class="fab fa-youtube"></i></div>
+        <div class="social"><a href="https://www.facebook.com/korneez/" target="_blank"><i class="fab fa-facebook"></i></a><a href="https://www.instagram.com/korneezpopcorn" target="_blank"> <i class="fab fa-instagram"></i></a>  </div>
       </h3>
       <div class="footer-links">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li><a href="cares.html">Korneez Cares</a></li>
             </ul>
           </div>
-          <div class="col-md-6 bd">
+          <div class="col-md-4 bd">
             <ul>
               <li><a href="addtoCart.html">Products</a></li>
               <li><a href="order.html">Order Status</a></li>
               <li><a href="news.html">Press & Media</a></li>
             </ul>
+          </div>
+          <div class="col-md-4">
+          <div class="pull-left">
+          	<img src="assets/images/iso.png" width="80" class="img-responsive">
+          </div>
+          <div class="pull-left">
+            <img src="assets/images/haccp.gif" width="50" class="img-responsive">
+           </div>
           </div>
         </div>
       </div>
@@ -186,7 +194,10 @@
   </div>
 </footer>
 <div class="footer-bottom">
-  <div class="container-fluid"> 2020 © Copyright. korneez.com. all rights reserved </div>
+  <div class="container-fluid"> 
+  	<div class="col-md-6">2020 © Copyright. Korneez.com. All Rights Reserved</div>
+ 	<div class="col-md-6 text-right">Web Design: <a href="https://www.behance.net/irfanhussains" target="_blank">UI Creatives</a></div>    
+  </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
