--- a/champ.html
+++ b/champ.html
@@ -33,7 +33,7 @@
                   <li><a href="caramel.html">CARAMEL PEANUT</a></li>
                   <li><a href="butter.html">BUTTERSCOTCH</a></li>
                   <li><a href="toffee.html">TOFFEE</a></li>
-                  <li><a href="champ.html">CHAMPS MIX</a></li>
+                  <li><a href="champ.html">CHAMPS</a></li>
                 </ul>
               </li>
             </ul>
@@ -59,7 +59,7 @@
   </div>
 </section>
 <section class="products">
-  <h1>CHAMP MIX</h1>
+  <h1>CHAMPS</h1>
   <div class="container-fluid">
     <div class="col-md-4">
     <img src="assets/images/box_ad1.jpg" class="img-responsive"><br>
@@ -67,7 +67,7 @@
 		
     </div>
     <div class="col-md-8 product_info">
-    	<p>Champs is the best of Korneez. Our salted and caramel coated popcorn mixed together to create a uinque flavour designed for all taste buds. A delicious companion for all fun activities whether watching or playing.</p>
+    	<p>Champs is the best of Korneez. Our salted and caramel coated popcorn mixed together to create a unique flavour designed for all taste buds. A delicious companion for all fun activities whether watching or playing.</p>
       <ul>
        	<li><i class="fa fa-check-circle"></i> 100% Whole Grain</li>
         	<li><i class="fa fa-check-circle"></i> GMO Free</li>
