--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <li><a href="caramel.html">CARAMEL PEANUT</a></li>
                   <li><a href="butter.html">BUTTERSCOTCH</a></li>
                   <li><a href="toffee.html">TOFFEE</a></li>
-                  <li><a href="champ.html">CHAMPS MIX</a></li>
+                  <li><a href="champ.html">CHAMPS</a></li>
                 </ul>
               </li>
             </ul>
@@ -74,7 +74,7 @@
         <span>CARAMEL PEANUT</span> <a href="caramel.html" class="shop-box">SHOP NOW</a></div>
       <div class="item">
         <div class="product-image champ"><img src="assets/images/champ.png" class="img-responsive"></div>
-        <span>CHAMPS MIX</span><a href="champ.html" class="shop-box"> SHOP NOW </a></div>
+        <span>CHAMPS</span><a href="champ.html" class="shop-box"> SHOP NOW </a></div>
       <div class="item">
         <div class="product-image plain"><img src="assets/images/plain_salted.png" class="img-responsive"></div>
         <span>PLAIN SALTED</span> <a href="plain.html" class="shop-box">SHOP NOW</a></div>
