--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                   <li><a href="caramel.html">CARAMEL PEANUT</a></li>
                   <li><a href="butter.html">BUTTERSCOTCH</a></li>
                   <li><a href="toffee.html">TOFFEE</a></li>
-                  <li><a href="champ.html">CHAMPS MIX</a></li>
+                  <li><a href="champ.html">CHAMPS</a></li>
                 </ul>
               </li>
             </ul>
