--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <ul class="navbar-nav nav">
           <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-store"></i><br>
             SHOP KORNEEZ <i class='fa fa-angle-down'></i></a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-submenu"> <a class="test" tabindex="-1" href="#">POPCORNS <i class='fa fa-angle-right'></i></a>
+            <ul class="dropdown-menu">  <li class="dropdown-submenu"> <a class="test" tabindex="-1" href="#">POPCORN LINE<i class='fa fa-angle-right'></i></a>
                 <ul class="dropdown-menu">
                   <li><a href="plain.html">PLAIN SALTED</a></li>
                   <li><a href="caramel.html">CARAMEL PEANUT</a></li>
