--- a/butter.html
+++ b/butter.html
@@ -66,6 +66,10 @@
 		
     </div>
     <div class="col-md-8 product_info">
+    <p>
+            <a class="primary-button" href="#">BUY IT NOW</a>
+            <span class="clearfix"></span>
+        </p>
     	<p>Korneez is not old school, but the new cool! Sweet & satisfyingly delicious, you’ll be licking your fingers for more. We promise we won’t judge you for craving Korneez Butterscotch Popcorn.</p>
       <ul>
        	<li><i class="fa fa-check-circle"></i> 100% Whole Grain</li>
