--- a/caramel.html
+++ b/caramel.html
@@ -66,6 +66,10 @@
 		
     </div>
     <div class="col-md-8 product_info">
+    <p>
+            <a class="primary-button" href="#">BUY IT NOW</a>
+            <span class="clearfix"></span>
+        </p>
     	<p>A mouth-watering combo of pure butter, premium popcorn and roasted peanuts, these gourmet ingredients are gently stirred with the finest caramel blend and slowly cooled and baked to Perfection.</p>
       <ul>
        	<li><i class="fa fa-check-circle"></i> 100% Whole Grain</li>
