--- a/champ.html
+++ b/champ.html
@@ -66,6 +66,10 @@
 		
     </div>
     <div class="col-md-8 product_info">
+    	<p>
+            <a class="primary-button" href="#">BUY IT NOW</a>
+            <span class="clearfix"></span>
+        </p>
     	<p>Champs is the best of Korneez. Our salted and caramel coated popcorn mixed together to create a unique flavour designed for all taste buds. A delicious companion for all fun activities whether watching or playing.</p>
       <ul>
        	<li><i class="fa fa-check-circle"></i> 100% Whole Grain</li>
