--- a/plain.html
+++ b/plain.html
@@ -66,6 +66,10 @@
 		
     </div>
     <div class="col-md-8 product_info">
+    <p>
+            <a class="primary-button" href="#">BUY IT NOW</a>
+            <span class="clearfix"></span>
+        </p>
     	<p>We at Korneez strive to select the best available corn and other ingredients and carefully cook, sift and pack our popcorn to bring them to you in the most crispy and mouth-watering condition.</p>
       <ul>
        	<li><i class="fa fa-check-circle"></i> 100% Whole Grain</li>
