--- a/toffee.html
+++ b/toffee.html
@@ -66,6 +66,10 @@
 		
     </div>
     <div class="col-md-8 product_info">
+    <p>
+            <a class="primary-button" href="#">BUY IT NOW</a>
+            <span class="clearfix"></span>
+        </p>
     	<p>Popcorn in delicious coating using exactly the same ingredients as for regular toffees. Unique recipe and method of processing in which each coated kernel comes out seperate and crisp in the end. Korneez toffee popcorn are high in nutritional value that satisfies hunger and at the same time is good for your health.</p>
       <ul>
        	<li><i class="fa fa-check-circle"></i> 100% Whole Grain</li>
